--- a/Untitled5.ipynb
+++ b/Untitled5.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,11 @@
     "# preamble\n",
     "import xarray as xr # for working with labelled multi-dimensional arrays                                \n",
     "import cartopy.crs as ccrs # for maps                                                                   \n",
-    "import cartopy.feature as cft\n",
     "import cartopy.mpl.ticker as cticker\n",
     "import cartopy.feature as cfeature\n",
     "import matplotlib.pyplot as plt # for matlab-like plotting                                              \n",
-    "import matplotlib.ticker as ticker                                \n",
-    "import numpy as np # for numerical operations                                                       \n",
-    "import cmocean as cm"
+    "import matplotlib.ticker as ticker     \n",
+    "import numpy as np"
    ]
   },
   {
@@ -36,24 +34,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 145 ms, sys: 60.5 ms, total: 205 ms\n",
-      "Wall time: 523 ms\n"
+      "CPU times: user 114 ms, sys: 6.71 ms, total: 120 ms\n",
+      "Wall time: 119 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x14ff92f1d950>"
+       "<matplotlib.collections.QuadMesh at 0x152c6ed2e550>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -74,7 +72,8 @@
     "%%time\n",
     "base = '/g/data/e14/mv7494/'\n",
     "sst_anom = xr.open_dataset(base + 'sst.day.anom.2020-09.nc').anom.isel(time = 26) # select 2020-09-27\n",
-    "sst_anom.plot()"
+    "sst_anom.plot()\n",
+    "# Wall time: 119 ms"
    ]
   },
   {
@@ -86,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,13 +122,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-20.07/lib/python3.7/site-packages/cartopy/mpl/geoaxes.py:1508: UserWarning: The following kwargs were not used by contour: 'cmp'\n",
+      "  result = matplotlib.axes.Axes.contourf(self, *args, **kwargs)\n",
       "/g/data3/hh5/public/apps/miniconda3/envs/analysis3-20.07/lib/python3.7/site-packages/ipykernel_launcher.py:29: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"papertype\" which is no longer supported as of 3.3 and will become an error two minor releases later\n"
      ]
     },
@@ -137,8 +138,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.86 s, sys: 52.8 ms, total: 9.91 s\n",
-      "Wall time: 9.93 s\n"
+      "CPU times: user 10.2 s, sys: 130 ms, total: 10.3 s\n",
+      "Wall time: 10.3 s\n"
      ]
     },
     {
@@ -184,15 +185,8 @@
     "plt.savefig(save + 'noaa_sst_anomalies_2020-09-27', dpi=300, facecolor='w', edgecolor='w', \n",
     "            orientation='landscape', papertype=None, format=None, transparent=False,pad_inches=0.1, metadata=None)\n",
     "# --- end of script ---------------------------------------------------------------------------------------------- #\n",
-    "# Wall time: 9.93 s"
+    "# Wall time: 10.3 s"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
