--- a/HadISST_jump.ipynb
+++ b/HadISST_jump.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "HadISST1.1_sst_1870on.pp.gz (~210Mb) downloaded from https://www.metoffice.gov.uk/hadobs/hadisst/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
