--- a/Testing_again_Qnet_vs_OHC_trends.ipynb
+++ b/Testing_again_Qnet_vs_OHC_trends.ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.47 s, sys: 3.78 s, total: 8.25 s\n",
-      "Wall time: 27 s\n"
+      "CPU times: user 3.19 s, sys: 1.66 s, total: 4.85 s\n",
+      "Wall time: 7.88 s\n"
      ]
     }
    ],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -38,8 +38,8 @@
      "text": [
       "control\n",
       "full forced simulation\n",
-      "CPU times: user 2min 35s, sys: 55 s, total: 3min 30s\n",
-      "Wall time: 3min 13s\n"
+      "CPU times: user 3min 18s, sys: 48.7 s, total: 4min 7s\n",
+      "Wall time: 2min 52s\n"
      ]
     }
    ],
@@ -62,7 +62,6 @@
     "    temp            = xr.open_mfdataset(archive+exp[s]+'output*/ocean/ocean_month.nc',decode_times=False).temp-273.15\n",
     "    \n",
     "    # calculating globally integrated net surface heat flux and ocean heat content\n",
-    "    # select only first 100 values for testing\n",
     "    Qnet     = (((net_sfc_heating+frazil_3d_int_z)*area_t)*average_DT*86400).cumsum(['time']).sum(['yt_ocean','xt_ocean'])\n",
     "    OHC      = (rho_0*C_p*temp*area_t*dzt).sum(['st_ocean','yt_ocean','xt_ocean']) # units of (J m-2 year-1)\n",
     "    # ---------------------------------------------------------------------------------------------------------------------------\n",
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +85,7 @@
        "[1.4031632549533856e+19, 1.4316239049719128e+19, '1.987997680095006 %']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -140,7 +139,7 @@
     "\n",
     "\n",
     "# comparing the two trend values\n",
-    "[poly_a[1], poly_b[1], str(100-(poly_a[1]/poly_b[1])*100)+str(' %')]\n",
+    "[poly_a[1], poly_b[1], str(abs(100-(poly_a[1]/poly_b[1])*100))+str(' %')]\n",
     "#            Qnet               OHC            Difference in percentage\n",
     "#             ↓                  ↓                    ↓"
    ]
