--- a/jra55_preparation_pre-industrial_offset_RDF_20250220_1426.ipynb
+++ b/jra55_preparation_pre-industrial_offset_RDF_20250220_1426.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Preparing the forcing files for a pre-industrial ocean-sea ice model spin-up following Huguenin et al. (2023)\n",
-    "- using JRA55-do-1-3 as input for the model\n",
+    "- using JRA55-do-1-5-0 as input for the model\n",
     "- only the surface air temperature, downward longwave radiation and specific humidity fields need to be changed\n",
     "- the remaining variables are from the RDF (repeat decade forcing) period which includes the time 1962-01-01 to 1971-31-12\n",
     "- reference: Huguenin, M.F., Holmes, R.M. & England, M.H. Drivers and distribution of global ocean heat uptake over the last half century. Nat Commun 13, 4921 (2022). https://doi.org/10.1038/s41467-022-32540-5\n",
