--- a/jra55_preparation_pre-industrial_offset_RDFjra55_preparation_pre-industrial_offset_RDF_20250220_1426.ipynb
+++ b/jra55_preparation_pre-industrial_offset_RDFjra55_preparation_pre-industrial_offset_RDF_20250220_1426.ipynb
@@ -993,7 +993,7 @@
     "print('#########################################################')    \n",
     "print('        '+experiment+'        ')\n",
     "print('#########################################################')\n",
-    "for i in [191]:#range(191,199,1): # loop over the 80 year period in which I progressively reduce the pre-industrial offset back to RDF levels again\n",
+    "for i in range(191,199,1): # loop over the 80 year period in which I progressively reduce the pre-industrial offset back to RDF levels again\n",
     "                           # i.e., this is the forcing for the transitional spin-up period where the ocean emerges from pre-industrial conditions\n",
     "                           # to the 1960s.\n",
     "    experiment_long = experiment + 'forcing_output' + str(i) + '/'\n",
@@ -1160,7 +1160,7 @@
     "\n",
     "scale = np.linspace(1,0,10)\n",
     "\n",
-    "for i in [191]:#range(191,199):\n",
+    "for i in range(191,199):\n",
     "\n",
     "    period = 'output' + str(i)\n",
     "    print(period)\n",
@@ -1239,7 +1239,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "for i in [191]:#range(192,201,1):\n",
+    "for i in range(192,201,1):\n",
     "    print(experiment)\n",
     "    \n",
     "    year_a ='1962'; res = '3hrPt/'\n",
