--- a/preparing_net_sfc_heating_fields.ipynb
+++ b/preparing_net_sfc_heating_fields.ipynb
@@ -7,12 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Purpose: Quickly analysing ENSOWind EXP to see if all okay\n",
+    "# Purpose: Preparing ERA5 net surface heat flux fields for plotting\n",
     "# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ #                         \n",
-    "#     Maurice F. Huguenin, m.huguenin-virchaux@unsw.edu.au, 28. 09. 2021      #                                                \n",
-    "# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ #\n",
-    "\n",
-    "# % preamble ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ #                         \n",
+    "#     Maurice F. Huguenin, m.huguenin-virchaux@unsw.edu.au, 21. 12. 2023      #                                                \n",
+    "# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ #                 \n",
     "base = '/g/data/e14/mv7494/access-om2/archive/025deg_jra55_iaf/'\n",
     "save = '/g/data/e14/mv7494/'\n",
     "\n",
@@ -4749,7 +4747,7 @@
     "                                     )[vars[f]][:,NA_lat[0]:NA_lat[1],NA_lon[0]:NA_lon[1]].resample(time='D').mean() / average_DT\n",
     "        data = data.to_dataset(name=vars[f]).to_netcdf(filename+vars[f]+'_daily_'+str(year)+'.nc')\n",
     "    print('--------------------------')\n",
-    "# Step II: now creating daily climatology over all years\n",
+    "# Step II: now creating daily climatology over 1981-2010\n",
     "    data_clim       = xr.open_mfdataset(filename+vars[f]+'_daily_*.nc', chunks = {'yt_ocean': '200MB', 'xt_ocean': '200MB'}, decode_times=True)[vars[f]][7670:18629]\n",
     "    for year in range(1959,2024):\n",
     "        if os.path.exists(filename+'daily_anomalies_'+str(year)+'.nc'):\n",
@@ -4982,352 +4980,6 @@
     "                       'Funding': 'UNSW (Program code 1476), ARC ACEAS (ARC Grant No. SR200100008), ARC CLEX (ARC Grant No. CE170100023)'}\n",
     "    nsf_day_anom.to_netcdf(filename+'_daily_anomalies_'+str(year)+'.nc')\n",
     "# Wall time: 1min for one year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "ede3684b-db23-40c9-8f16-934c489194c6",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'nsf_day_anom' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<timed eval>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'nsf_day_anom' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "nsf_day_anom.groupby('time.month').mean('time')[-4:].plot.imshow(\"longitude\", \"latitude\", col=\"month\", col_wrap=4, robust=True, vmin=-90, vmax=90, cmap='RdBu_r')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9461737-a672-41c1-80b1-d83e9395f5c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "671c4c45-03d1-49fd-9b53-6b6186c37187",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'nsf_day_anom' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/jobfs/105229695.gadi-pbs/ipykernel_2345624/1702037217.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnsf_day_anom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'time.month'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'time'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'nsf_day_anom' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "nsf_day_anom.groupby('time.month').mean('time')[-4:]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "35d3844c-5dc8-4a87-9751-fcd79c8aa7df",
-   "metadata": {},
-   "source": [
-    "### Creating four panels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a603d30f-351d-488b-9e78-2320ad64756c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(16,9))\n",
-    "for f in range(4):\n",
-    "    ax1 = plt.subplot(2,2,f+1)\n",
-    "    nsf_day_anom.groupby('time.month').mean('time')[-4:][f,:,:].plot(levels=np.linspace(-90,90,21))\n",
-    "    plt.title('ERA5 Qnet_a 2023-'+str(5+f))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8a00c94-6a18-4b2b-a899-d2d13ddc569b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f9fd7c2-0630-474d-b275-c51b247b82f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98901912-4ad0-49ab-a0ac-90533d7098a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8a6c4b7-9c09-4e39-a47b-cd5e3f682042",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29720c2a-b4cc-4005-851c-6f378dc0b3f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07e3b827-7525-4b0a-9c5b-e1cb37f4fdb2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55a9827f-e351-4530-8816-6d54e970e2b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "656e2105-4fcc-488b-ac61-7bc088105fa1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "adbda505-9efe-46a3-88b4-56ef83bd5cf9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9064e258-8d0b-4bfc-a203-0c25605211d9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "f7ddbec6-bd8c-4fd9-acd3-35dfc76bfac3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Preparing daily nsf_clim for year 1980\n",
-      "Preparing daily nsf_clim for year 1981\n",
-      "-----------------\n",
-      "CPU times: user 14.4 s, sys: 1.64 s, total: 16.1 s\n",
-      "Wall time: 30.8 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "session = cc.database.create_session()\n",
-    "import matplotlib.path as mpath \n",
-    "# -------------------------------------------------------------------------------------------- #\n",
-    "NA_lat        = [    60,    361] # [    60,    361] = 75°N - 0°                                #\n",
-    "NA_lon        = [   320,    801] # [   320,    801] = 100°W - 20°E                             #\n",
-    "time          = [350650, 613633] # [350650, 613633] = 1980-01-01T00:00:00, 2010-01-01T01:00:00 #\n",
-    "# -------------------------------------------------------------------------------------------- #\n",
-    "filename = ['/g/data/e14/mv7494/ERA5/ERA5_NorthAtlantic_nsf_clim_daily_',\n",
-    "            '/g/data/e14/mv7494/ERA5/ERA5_NorthAtlantic_nsf_daily_2023-01-01_to_2023-08-01.nc']\n",
-    "era_path = '/g/data/rt52/era5/single-levels/reanalysis/'\n",
-    "vars = ['slhf', 'sshf', 'ssrd', 'strd'] # surface latent heat flux, surface sensible heat flux, \n",
-    "#       'slhf' Surface latent heat flux\n",
-    "#               'sshf' Surface sensible heat flux\n",
-    "#                       'ssrd' Surface short-wave (solar) radiation downwards\n",
-    "#                              'strd' Surface long-wave (thermal) radiation downwards\n",
-    "\n",
-    "for year in range(1980,1982):\n",
-    "    if os.path.exists(filename[0]+'nsf_clim_'+str(year)+'.nc'):\n",
-    "        print(str(year)+' already done')\n",
-    "        continue\n",
-    "    print('Preparing daily nsf_clim for year '+ str(year))\n",
-    "    if e == 0: era_short = '/'+str(year)+'/*.nc'; suffix = 'nsf_clim'    # select all the years      \n",
-    "    \n",
-    "    for f in range(4): # loop through the four components of the net surface heat flux\n",
-    "        data = xr.open_mfdataset(era_path + vars[f] + era_short,\n",
-    "                                     chunks = {'yt_ocean': '200MB', 'xt_ocean': '200MB'}\n",
-    "                                    )[vars[f]][:,NA_lat[0]:NA_lat[1],NA_lon[0]:NA_lon[1]].resample(time='D').mean()\n",
-    "    if f == 0: slhf = data\n",
-    "    if f == 1: sshf = data\n",
-    "    if f == 2: ssrd = data\n",
-    "    if f == 3: strd = data\n",
-    "    nsf = (slhf + sshf + ssrd + strd).to_dataset(name=suffix).to_netcdf(filename[0]+'nsf_clim_'+str(year)+'.nc')\n",
-    "print('-----------------')\n",
-    "\n",
-    "\n",
-    "                "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa8d6307-d456-4126-bcb9-36795737433c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "            # if e == 1:\n",
-    "            #     data = xr.open_mfdataset(era_path + vars[f] + era_short,\n",
-    "            #                              chunks = {'yt_ocean': '200MB', 'xt_ocean': '200MB'}\n",
-    "            #                             )[vars[f]][:,NA_lat[0]:NA_lat[1],NA_lon[0]:NA_lon[1]].resample(time='D').mean()\n",
-    "            #     data.to_dataset(name=vars[f]).to_netcdf('/g/data/e14/mv7494/ERA5/ERA5_NorthAtlantic_'+vars[f]+'_daily_2023-01-01_to_2023-08-01.nc')  \n",
-    "            #     print(vars[f] + ' done')\n",
-    "\n",
-    "            # if f == 0: slhf = data\n",
-    "            # if f == 1: sshf = data\n",
-    "            # if f == 2: ssrd = data\n",
-    "            # if f == 3: strd = data\n",
-    "        # nsf = (slhf + sshf + ssrd + strd).to_dataset(name=suffix).to_netcdf(filename[e])  \n",
-    "    # Wall time: 1min 7s for one year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab95a815-f510-4304-ad1a-9eb6aff18e92",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db053ac7-409a-4101-b96d-6462252b3eda",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5977daa-ded1-447e-81da-957b55af0fbb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2ee6ad3-123c-45d9-aaa3-e688d79e9914",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30438830-bc4a-4280-b8d4-fb6ff002407c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2bce195b-4b63-4bb8-abb7-08e00eb0ab6b",
-   "metadata": {},
-   "source": [
-    "### Backup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "728b341e-9961-4904-8f7f-dad73fcb28d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "session = cc.database.create_session()\n",
-    "import matplotlib.path as mpath \n",
-    "# -------------------------------------------------------------------------------------------- #\n",
-    "NA_lat        = [    60,    361] # [    60,    361] = 75°N - 0°                                #\n",
-    "NA_lon        = [   320,    801] # [   320,    801] = 100°W - 20°E                             #\n",
-    "time          = [350650, 613633] # [350650, 613633] = 1980-01-01T00:00:00, 2010-01-01T01:00:00 #\n",
-    "# -------------------------------------------------------------------------------------------- #\n",
-    "filename = ['/g/data/e14/mv7494/ERA5/ERA5_NorthAtlantic_nsf_clim_daily_1980-01-01_to_2010-08-01.nc',\n",
-    "            '/g/data/e14/mv7494/ERA5/ERA5_NorthAtlantic_nsf_daily_2023-01-01_to_2023-08-01.nc']\n",
-    "era_path = '/g/data/rt52/era5/single-levels/reanalysis/'\n",
-    "vars = ['slhf', 'sshf', 'ssrd', 'strd'] # surface latent heat flux, surface sensible heat flux, \n",
-    "#       'slhf' Surface latent heat flux\n",
-    "#               'sshf' Surface sensible heat flux\n",
-    "#                       'ssrd' Surface short-wave (solar) radiation downwards\n",
-    "#                              'strd' Surface long-wave (thermal) radiation downwards\n",
-    "\n",
-    "for e in range(1): # loop through the climatology and the 2023 year\n",
-    "    if e == 0: era_short = '/*/*.nc'; suffix = 'nsf_clim'    # select all the years\n",
-    "    if e == 1: era_short = '/2023/*.nc'; suffix = 'nsf'         # only select year 2023\n",
-    "        \n",
-    "#    if not os.path.exists(filename[e]):\n",
-    "#        print('Calculating anomalies as they are not yet done')\n",
-    "#        print('----------------------------------------------') \n",
-    "\n",
-    "    for f in range(4): # loop through the four components of the net surface heat flux\n",
-    "        if e == 0:\n",
-    "            data = xr.open_mfdataset(era_path + vars[f] + era_short,\n",
-    "                                     chunks = {'yt_ocean': '200MB', 'xt_ocean': '200MB'}\n",
-    "                                    )[vars[f]][time[0]:time[1],NA_lat[0]:NA_lat[1],NA_lon[0]:NA_lon[1]].resample(time='D').mean()\n",
-    "            data.to_dataset(name=vars[f]).to_netcdf('/g/data/e14/mv7494/ERA5/ERA5_NorthAtlantic_'+vars[f]+'_clim_daily_1980-01-01_to_2010-08-01.nc')  \n",
-    "        if e == 1:\n",
-    "            data = xr.open_mfdataset(era_path + vars[f] + era_short,\n",
-    "                                     chunks = {'yt_ocean': '200MB', 'xt_ocean': '200MB'}\n",
-    "                                    )[vars[f]][:,NA_lat[0]:NA_lat[1],NA_lon[0]:NA_lon[1]].resample(time='D').mean()\n",
-    "            data.to_dataset(name=vars[f]).to_netcdf('/g/data/e14/mv7494/ERA5/ERA5_NorthAtlantic_'+vars[f]+'_daily_2023-01-01_to_2023-08-01.nc')  \n",
-    "        # if f == 0: slhf = data\n",
-    "        # if f == 1: sshf = data\n",
-    "        # if f == 2: ssrd = data\n",
-    "        # if f == 3: strd = data\n",
-    "    # nsf = (slhf + sshf + ssrd + strd).to_dataset(name=suffix).to_netcdf(filename[e])  \n",
-    "# Wall time: 1min 7s for one year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "6d3ca40c-d7fc-4db1-a83a-7b0887dd30bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ----------------------------------------------------------------------------------------------------------------------- #\n",
-    "#                                                   Notes down below                                                      #\n",
-    "# ----------------------------------------------------------------------------------------------------------------------- #"
    ]
   }
  ],
